--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,5 +23,6 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:22.0.0'
     compile 'com.android.support:recyclerview-v7:22.2.0'
-    compile files('C:/Users/Ben/Desktop/banana plan/WorkFlowAndroid/libs/devsmartlib.jar')
+    compile 'it.sephiroth.android.library.horizontallistview:hlistview:1.2.2'
+    compile files('libs/achartengine-1.2.0.jar')
 }
