--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    packagingOptions {
+        exclude 'AndroidManifest.xml'
+    }
 }
 
 dependencies {
@@ -24,5 +27,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:22.0.0'
     compile 'com.android.support:recyclerview-v7:22.2.0'
     compile 'it.sephiroth.android.library.horizontallistview:hlistview:1.2.2'
-    compile files('libs/achartengine-1.2.0.jar')
+    compile files('libs/achartengine_workflow.jar')
 }
