[Management] Dialog to manage equipment/factory/vendor/warning/manager/worker
UI of the dialog, not include function.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,11 @@
             </intent-filter>
         </activity>
 
+        <activity
+            android:name=".management.ManagementDialog"
+            android:theme="@style/AppDialogTheme.NoActionBar" >
+        </activity>
+
     </application>
 
 </manifest>
