--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,8 @@
     package="com.bananaplan.workflowandroid" >
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-feature android:name="android.hardware.camera"/>
+
+    <uses-feature android:name="android.hardware.camera" />
 
     <application
         android:allowBackup="true"
@@ -17,6 +18,7 @@
             android:screenOrientation="landscape" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -24,6 +26,11 @@
         <activity
             android:name=".management.ManagementDialog"
             android:theme="@style/AppDialogTheme.NoActionBar" >
+        </activity>
+
+        <activity
+            android:name=".detail.DetailedWorkerActivity"
+            android:theme="@style/PopupActivityTheme" >
         </activity>
 
     </application>
