--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,10 +23,10 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'it.sephiroth.android.library.horizontallistview:hlistview:1.2.2'
     compile files('libs/achartengine_workflow.jar')
-    compile 'com.android.support:design:23.0.0'
     compile 'com.android.support:recyclerview-v7:23.0.0'
     compile 'com.android.support:appcompat-v7:23.0.0'
+    compile 'com.android.support:design:23.0.1'
 }
