--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,9 @@ android {
     }
     packagingOptions {
         exclude 'AndroidManifest.xml'
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/LICENSE'
     }
 }
 
@@ -27,11 +30,13 @@ repositories {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'it.sephiroth.android.library.horizontallistview:hlistview:1.2.2'
     compile files('libs/achartengine_workflow.jar')
     compile 'com.android.support:recyclerview-v7:23.0.0'
     compile 'com.android.support:appcompat-v7:23.0.0'
     compile 'com.android.support:design:23.0.1'
     compile 'asia.ivity.android:drag-sort-listview:1.0'
+    compile files('libs/okio-1.6.0.jar')
+    compile files('libs/okhttp-2.5.0.jar')
 }
