--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,6 @@ dependencies {
     compile 'asia.ivity.android:drag-sort-listview:1.0'
     compile files('libs/okio-1.6.0.jar')
     compile files('libs/okhttp-2.5.0.jar')
+    compile 'com.parse.bolts:bolts-android:1.+'
+    compile 'com.parse:parse-android:1.+'
 }
