--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,26 +48,32 @@
         </activity>
         <activity
             android:name=".management.ManagementDialog"
-            android:theme="@style/AppDialogTheme.NoActionBar" >
+            android:theme="@style/AppDialogTheme.NoActionBar"
+            android:screenOrientation="landscape">
         </activity>
         <activity android:name=".warning.AddWarningDialog"
-            android:theme="@style/AppDialogTheme.NoActionBar">
+            android:theme="@style/AppDialogTheme.NoActionBar"
+            android:screenOrientation="landscape">
         </activity>
         <activity
             android:name=".detail.task.DetailedTaskActivity"
-            android:theme="@style/PopupActivityTheme" >
+            android:theme="@style/PopupActivityTheme"
+            android:screenOrientation="landscape">
         </activity>
         <activity
             android:name=".detail.worker.DetailedWorkerActivity"
-            android:theme="@style/PopupActivityTheme" >
+            android:theme="@style/PopupActivityTheme"
+            android:screenOrientation="landscape">
         </activity>
         <activity
             android:name=".detail.warning.DetailedWarningActivity"
-            android:theme="@style/PopupActivityTheme" >
+            android:theme="@style/PopupActivityTheme"
+            android:screenOrientation="landscape">
         </activity>
         <activity
             android:name=".utility.DisplayImageActivity"
-            android:theme="@style/PopupActivityTheme" >
+            android:theme="@style/PopupActivityTheme"
+            android:screenOrientation="landscape">
         </activity>
 
         <!-- Parse necessary settings -->
